src/test/valid/extensionTests/classes/classDefaultAttribute.wacc
begin
  class Berry() is
    string colour = "red";
    int size = 4;

    Berry(string c, int s) is
      colour = c;
      size = s
    end

    Berry() is
      skip
    end

    string getColour() is
      return colour
    end

    int getSize() is
      return size
    end

    bool setColour(string c) is
      colour = c;
      return true
    end
  end

  berry = new Berry("blue", 2);
  raspberry = new Berry();

  string colour = raspberry.getColour();
  println colour;

  int size = berry.getSize();
  println size
end